2008-01-29  Ben Motmans <ben.motmans@gmail.com> 

	* Schema/MySqlDatabaseSchema.cs, Schema/MySqlCollationSchema.cs,
	  Schema/MySqlCharacterSetSchema.cs, MySqlSchemaProvider.cs, Collections,
	  Collections/MySqlCharacterSetSchemaCollection.cs,
	  Collections/MySqlCollationSchemaCollection.cs: added support for
	  collations/character sets in the DB schema
	* Widgets/MySqlCreateDatabaseWidget.cs: subclass of the default
	  CreateDatabaseWidget
	* gtk-gui,
	  gtk-gui/MonoDevelop.Database.Sql.MySql.MySqlCreateDatabaseWidget.cs,
	  gtk-gui/generated.cs, gtk-gui/objects.xml,
	  gtk-gui/MonoDevelop.Database.Sql.MySql.MySqlColumnEditorWidget.cs,
	  gtk-gui/gui.stetic: auto generated code
	* MonoDevelop.Database.Sql.MySql.mdp: depend on Gtk# 2.8 instead of 2.12

2008-01-28  Ben Motmans <ben.motmans@gmail.com> 

	* MySqlDialect.cs, MySqlConnectionProvider.cs, MySqlSchemaProvider.cs,
	  MySqlDbFactory.cs, MySqlGuiProvider.cs: small API related changes
	* MySqlPooledDbConnection.cs: database version support
	* Widgets/MySqlColumnEditorWidget.cs, Widgets/MySqlCreateDatabaseWidget.cs:
	  placeholders for future implementations

2008-01-28  Ben Motmans <ben.motmans@gmail.com> 

	* MonoDevelop.Database.Sql.MySql.addin.xml: removed obsolete stuff from the
	  old capabilities system

2008-01-25  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Database.Sql.MySql.addin.xml: Update MD version.

2008-01-22  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Database.Sql.MySql.addin.xml: Updated add-in category and
	  description.

2007-12-14  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Database.Sql.MySql.mdp: Updated project file. The order of
	  extended properties won't change anymore.

2007-12-12  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Database.Sql.MySql.addin.xml: Bump add-in versions.

2007-12-04  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Database.Sql.MySql.mdp: Updated project files.
